# tpt-crucible

./: .gitignore  .pre-commit-config.yaml  BUSINESS_CASE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_AI_BUILD.md  Cargo.toml  LICENSE  LOCAL_AI_PC_BUILD.md  LOCAL_AI_PIPELINE.md  Makefile  QWEN_HARDWARE_GUIDE.md  README.md  SECURITY.md  VERSIONING.md  build-wasm.sh  conftest.py  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  spec.txt  todo 1260625.md  todo 1260629.md  todo.md  todo1.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
cloud/provider-sdk/: provider-api.yaml
cloud/synthesis-broker/: go.mod
cloud/synthesis-worker/: Dockerfile  go.mod
crates/tpt-alloy/: Cargo.toml
crates/tpt-alloy-python/: Cargo.toml
crates/tpt-alloy-python/src/: lib.rs
crates/tpt-alloy/src/: firmware.rs  lib.rs  partition.rs  topology.rs
crates/tpt-catalyst/: Cargo.toml
crates/tpt-catalyst-python/: Cargo.toml
crates/tpt-catalyst-python/src/: lib.rs
crates/tpt-catalyst/src/: ingest.rs  ip_lock.rs  ir.rs  lib.rs  mlir.rs  optimizer.rs  package.rs  wasm_api.rs
docker/: Dockerfile.runtime  Dockerfile.synthesis
docs/: architecture.md  modules.md
drivers/certification/: certify.py  keygen.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  not-found.tsx  page.tsx
frontend/src/components/: AccuracyDashboard.tsx  AlloyTuneReport.tsx  AutoDiscoveryPanel.tsx  BoardAutoDetect.tsx  BomTab.tsx  CarbonCost.tsx  (+40 more)
python/tpt_alloy/: pyproject.toml
python/tpt_alloy/tests/: test_package_writer.py  test_parallel_flash.py  test_partition.py  test_platformio.py  test_tinyllama_swarm.py
python/tpt_alloy/tpt_alloy/: __init__.py  ai_topology.py  auto_discovery.py  bandwidth_partition.py  cli.py  fault_tolerance.py  firmware.py  kv_cache.py  ota.py  ota_cli.py  package_writer.py  parallel_flash.py  partition.py  pipeline.py  platformio.py  riscv_isa.py  sil_tuner.py  telemetry.py  telemetry_adapter.py  topology.py
python/tpt_alloy/tpt_drivers/: ai_topology.py
python/tpt_catalyst/: pyproject.toml
python/tpt_catalyst/tests/: test_cache.py  test_carbon_speculative.py  test_community_cache.py  test_compat.py  test_doctor.py  test_extended_ingest.py  test_gguf.py  test_hf_search.py  test_ingest.py  test_new_formats.py  test_nl_config.py  test_optimizer.py  test_package_reports.py  test_quantize.py  test_spark.py  test_spark_replay.py  test_tptlog.py  test_wizard_validator.py
python/tpt_catalyst/tpt_catalyst/: __init__.py  accuracy_regression.py  adaptive.py  awq_gptq_ingest.py  cache.py  carbon.py  cli.py  community_cache.py  compare.py  compat.py  diagnose_cli.py  diagnostics.py  doctor.py  errors.py  exl2_ingest.py  gguf_ingest.py  hf_search.py  ingest.py  intermittent.py  ip_lock.py  ir.py  jax_ingest.py  keras_ingest.py  llamafile_ingest.py  llm_diagnosis.py  marketplace.py  nl_config.py  optimizer.py  package_reports.py  provenance.py  quant_search.py  quantize.py  quickstart.py  safetensors_ingest.py  spark_autodetect.py  spark_benchmark.py  spark_integration.py  spark_replay.py  sparsity.py  streaming_preflight.py  (+6 more)
python/tpt_drivers/: pyproject.toml
python/tpt_drivers/tests/: test_ai_gen.py  test_drivers.py  test_power.py  test_probe.py  test_recipes.py
python/tpt_drivers/tpt_drivers/: __init__.py  ai_gen.py  anomaly.py  bom.py  cli.py  driver.py  jlcpcb.py  power_estimator.py  probe.py  recipes.py  registry.py
python/tpt_drivers/tpt_drivers/keys/: tpt_public.pem
python/tpt_element/: pyproject.toml
python/tpt_element/tests/: test_ai_circuit.py  test_element.py  test_kicad.py  test_reality_check.py  test_spice_sim.py  test_three_layer_nn.py
python/tpt_element/tpt_element/: __init__.py  ai_circuit.py  cli.py  kicad.py  package_writer.py  reality_check.py  spice.py  spice_pipeline.py  spice_sim.py  telemetry.py  telemetry_adapter.py  weight_map.py
python/tpt_emulator/: pyproject.toml
python/tpt_emulator/tests/: test_emulator.py
python/tpt_emulator/tpt_emulator/: __init__.py  alloy_sil.py  cli.py  element_sil.py  fusion_sil.py  interface.py
python/tpt_fl/: pyproject.toml
python/tpt_fl/tpt_fl/: __init__.py  cli.py  compression.py  config.py  orchestrator.py
python/tpt_fusion/: pyproject.toml
python/tpt_fusion/tests/: test_fusion.py  test_hbm.py  test_overlay.py  test_telemetry.py  test_telemetry_adapter.py  test_tuner.py
python/tpt_fusion/tpt_fusion/: __init__.py  ai_rtl.py  board.py  cli.py  compile_estimator.py  hbm_router.py  litex_bridge.py  mac_array.py  overlay.py  package_writer.py  rtl.py  synthesis_tuner.py  telemetry.py  telemetry_adapter.py  toolchain.py
python/tpt_mosaic/: pyproject.toml
python/tpt_mosaic/tests/: test_mosaic.py
python/tpt_mosaic/tpt_mosaic/: __init__.py  bridge.py  cli.py  nl_topology.py  orchestrator.py  partition.py  speculative.py
python/tpt_photon/: pyproject.toml
python/tpt_photon/tests/: test_photon.py
python/tpt_photon/tpt_photon/: __init__.py  cli.py  mzi_mesh.py
python/tpt_pulse/: pyproject.toml
python/tpt_pulse/tests/: test_pulse.py
python/tpt_pulse/tpt_pulse/: __init__.py  cli.py  converter.py  lif_node.py  package_writer.py  sim_export.py
python/tpt_shell/: pyproject.toml
python/tpt_shell/tpt_shell/: __init__.py  cli.py  repl.py  session.py
python/tpt_silicon/: pyproject.toml
python/tpt_silicon/tests/: test_silicon.py
python/tpt_silicon/tpt_silicon/: __init__.py  array_layout.py  bitline.py  cli.py  package_writer.py  weight_packer.py
python/tpt_train/: pyproject.toml
python/tpt_train/tests/: test_marketplace.py  test_train.py
python/tpt_train/tpt_train/: __init__.py  cli.py  hardware_aware.py  jax_hook.py  profile.py  pytorch_hook.py
scripts/: install-xrt.sh  setup-wsl2.ps1
services/crucible-cloud/: Dockerfile  go.mod
services/synthesis-broker/: Dockerfile  community_cache_index.json  go.mod
services/synthesis-worker/: Dockerfile  go.mod
services/tpt-observer/: Dockerfile  go.mod
tests/integration/: test_pipeline.py
validator/tpt_validator/: __init__.py  __main__.py  prompt_suite.json  validator.py
(+35 files in other folders)
