[workspace]
resolver = "2"
members = [
  "crates/tpt-catalyst",
  "crates/tpt-alloy",
  "crates/tpt-catalyst-python",
  "crates/tpt-alloy-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tpt-crucible/tpt-crucible"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
pyo3 = { version = "0.24", features = ["extension-module"] }
tracing = "0.1"
tracing-subscriber = "0.3"
melior = "0.15"
sha2 = "0.10"
