[workspace]
resolver = "2"
members = [
  "crates/tpt-catalyst",
  "crates/tpt-alloy",
  "crates/tpt-catalyst-python",
  "crates/tpt-alloy-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["TPT Solutions <contact@tpt.solutions>"]
repository = "https://github.com/tpt-solutions/tpt-crucible"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
pyo3 = { version = "0.24", features = ["extension-module"] }
tracing = "0.1"
tracing-subscriber = "0.3"
melior = "0.15"
sha2 = "0.10"
zip = "2"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
