[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-crucible"
version = "0.1.0"
description = "TPT Crucible — AI compiler suite for non-traditional hardware"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

# Core (Catalyst + Alloy) — requires maturin build separately
# Install with: pip install -e .[all] after running: make build
dependencies = []

[project.optional-dependencies]
core = [
    "tpt-catalyst",
    "tpt-alloy",
]
fpga = [
    "tpt-catalyst",
    "tpt-alloy",
    "tpt-fusion",
    "tpt-emulator",
]
swarm = [
    "tpt-catalyst",
    "tpt-alloy",
    "tpt-drivers",
    "tpt-shell",
]
analog = [
    "tpt-catalyst",
    "tpt-element",
    "tpt-emulator",
]
train = [
    "tpt-train",
]
cloud = [
    "tpt-catalyst",
    "tpt-mosaic",
    "tpt-emulator",
]
all = [
    "tpt-catalyst",
    "tpt-alloy",
    "tpt-element",
    "tpt-fusion",
    "tpt-emulator",
    "tpt-mosaic",
    "tpt-drivers",
    "tpt-train",
    "tpt-silicon",
    "tpt-photon",
    "tpt-pulse",
    "tpt-shell",
    "tpt-fl",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
    "maturin>=1.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["python", "tests"]
markers = ["integration: end-to-end pipeline tests (requires tpt-emulator)"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
