[package]
name = "tpt-alloy-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for TPT Alloy"

[lib]
name = "tpt_alloy_python"
crate-type = ["cdylib"]

[dependencies]
tpt-alloy = { path = "../tpt-alloy" }
pyo3.workspace = true
serde_json.workspace = true
