[package]
name = "tpt-alloy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TPT Alloy — Swarm partitioning and firmware generation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
