[package]
name = "tpt-catalyst-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for TPT Catalyst"

[lib]
name = "tpt_catalyst_python"
crate-type = ["cdylib"]

[dependencies]
tpt-catalyst = { path = "../tpt-catalyst" }
pyo3.workspace = true
serde_json.workspace = true
