[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tpt-alloy"
version = "0.1.0"
description = "TPT Alloy — Swarm partitioning and firmware generation"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
tpt-alloy = "tpt_alloy.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "tpt_alloy._native"
