[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tpt-catalyst"
version = "0.1.0"
description = "TPT Catalyst — Core IR compiler for AI model ingestion"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
tpt-catalyst = "tpt_catalyst.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "tpt_catalyst._native"
