[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-drivers"
version = "0.1.0"
description = "TPT Drivers — Hardware driver SDK and community registry"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
tpt-drivers = "tpt_drivers.cli:main"

[tool.setuptools.packages.find]
where = ["."]
