[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-element"
version = "0.1.0"
description = "TPT Element — Analog compute weight mapping and drift simulation"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
spice = ["pyspice"]
ml = ["torch>=2.0"]

[project.scripts]
tpt-element = "tpt_element.cli:main"

[tool.setuptools.packages.find]
where = ["."]
