[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-emulator"
version = "0.1.0"
description = "TPT Emulator — Software-in-the-Loop simulation for all hardware types"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
tpt-emulate = "tpt_emulator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
