[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-fl"
version = "0.1.0"
description = "TPT FL — Federated learning orchestration for custom AI hardware"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "TPT Solutions", email = "contact@tpt.solutions" }]
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
tpt-fl = "tpt_fl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
