[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-fusion"
version = "0.1.0"
description = "TPT Fusion — FPGA synthesis and HBM auto-routing"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
hdl = ["amaranth>=0.5"]
synth = []

[project.scripts]
tpt-fusion = "tpt_fusion.cli:main"

[tool.setuptools.packages.find]
where = ["."]
