[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-mosaic"
version = "0.1.0"
description = "TPT Mosaic — Hybrid cross-hardware deployment orchestrator"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
tpt-mosaic = "tpt_mosaic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
