[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-photon"
version = "0.1.0"
description = "TPT Photon — Photonic compute backend (EXPERIMENTAL)"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
tpt-photon = "tpt_photon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
