[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-pulse"
version = "0.1.0"
description = "TPT Pulse — Neuromorphic / ANN→SNN compiler"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
tpt-pulse = "tpt_pulse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
