[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-shell"
version = "0.1.0"
description = "TPT Shell — Interactive hardware REPL for TPT Crucible deployments"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "TPT Solutions", email = "contact@tpt.solutions" }]
dependencies = [
    "prompt_toolkit>=3.0",
    "websockets>=12.0",
]

[project.scripts]
tpt-shell = "tpt_shell.cli:main"

[tool.setuptools.packages.find]
where = ["."]
