[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-silicon"
version = "0.1.0"
description = "TPT Silicon — Compute-in-Memory backend for CIM accelerators"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
tpt-silicon = "tpt_silicon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
