[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tpt-train"
version = "0.1.0"
description = "TPT Train — PyTorch/JAX training hooks for quantization-aware profiles"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0"]
jax = ["jax>=0.4", "flax>=0.8"]

[project.scripts]
tpt-train = "tpt_train.cli:main"

[tool.setuptools.packages.find]
where = ["."]
